@@ -1,3 +1,7 @@
+2010-11-05  John ff  <jpff@cs.bath.ac.uk>
+
+	* OOps/ugens4.c (riset, rndset, rhset): Use Warning rather than Message
+
 2010-11-04  John ff  <jpff@cs.bath.ac.uk>
 
 	* Opcodes/pvsbasic.c (MAXOUTS): Extend upto 16 outputs
